new way of presenting job openings

--- a/pl/open-source-software-tester-intern/index6/nexss-career-job-details.html
+++ b/pl/open-source-software-tester-intern/index6/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Career / Job Openings - Nexss.com"
-permalink: /nexss-career.html
+title: "Open Source Software Tester - Intern - JOB Openings - nexss.com"
+permalink: /pl/open-source-software-tester-intern/index6/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /nexss-career.html
 </script>
 
   <title>
-    Career / Job Openings - Nexss.com
+    Open Source Software Tester - Intern - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Check our job Openings at Nexss.com">
+  <meta name="description" content="Open Source Software Tester - Intern - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Career / Job Openings - Nexss.com">
+  <meta property="og:description" content="Open Source Software Tester - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -49,18 +49,18 @@ permalink: /nexss-career.html
             </li>
                         <!-- <li class="hideSmall">
                 <i class="fa fa-map-marker"></i>
-                86-005, Prądki, Poland
+                86-005, Prądki, Polska
             </li> -->
 
         </ul>
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career.html">EN</a>
+                <a href="/en/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/nexss-career.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -80,26 +80,26 @@ permalink: /nexss-career.html
     <div class="nav clearfix">
         <ul>
             <li>
-                <a href="faq.html">FAQ</a>
+                <a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
             </li>
             <li>
-                <a href="index.html#services">services</a>
+                <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
-                <a href="nexss-career.html">career</a>
+                <a href="pl/nexss-career.html">career</a>
             </li>
             <li>
-                <a href="nexss-blog.html">blog</a>
+                <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="nexss-portfolio.html">portfolio</a>
+                <a href="pl/nexss-portfolio.html">portfolio</a>
             </li>
             <li>
-                <a href="index.html#contacts">contact</a>
+                <a href="pl/index.html#contacts">kontakt</a>
             </li>
         </ul>
         <div class="btn__wrap__center">
-            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -109,19 +109,19 @@ permalink: /nexss-career.html
     <div class="phone_nav">
         <ul>
             <li>
-                <a href="faq.html">FAQ</a>
+                <a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
             </li>
             <li>
-                <a href="index.html#services">services</a>
+                <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
-                <a href="nexss-blog.html">blog</a>
+                <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="nexss-portfolio.html">porfolio</a>
+                <a href="pl/nexss-portfolio.html">porfolio</a>
             </li>
             <li>
-                <a href="index.html#contacts">contact</a>
+                <a href="pl/index.html#contacts">kontakt</a>
             </li>
         </ul>
     </div>
@@ -133,57 +133,40 @@ permalink: /nexss-career.html
                 <div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Career </span>
-      Job Openings
+      <span>Kariera </span>
+      Job Details
     </div>
-    <div style="font-size:larger;color:#1567c9;">
-      Nexss's vision is a world that everyone is able to write at least basic programs. We develop innovative and
-      evolutionary products. We will give you more details at the later stage. Check our job openings and if you have
-      any questions don't hesitate to contact us.
-    </div>
-
     <div>
-
-      <div>
-                <hr>
-        <h3><a href="open-source-software-developer-intern/index1/nexss-career-job-details.html">Open Source Software Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
+            <div>
+        <h1>Open Source Software Tester - Intern</h1>
+        <br>
+        <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
-                <hr>
-        <h3><a href="open-source-art-designer-intern/index2/nexss-career-job-details.html">Open Source Art Designer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html">Open Source Content &amp; SEO Specialist - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="open-source-sound-designer-intern/index4/nexss-career-job-details.html">Open Source Sound Designer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="open-source-video-editor-intern/index5/nexss-career-job-details.html">Open Source Video Editor - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="open-source-software-tester-intern/index6/nexss-career-job-details.html">Open Source Software Tester - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-              </div>
-
-      <hr>
+        
+                <h4>Preferred Qualifications</h4>
+        <ul>
+<li>Previous any experience in manual or automatic testing</li>
+</ul>
+                        <h4>Nice To Have</h4>
+        <ul>
+<li><strong>Cypress</strong>
+<ul>
+<li><strong>@nexssp/test</strong>,</li>
+<li><strong>Postman</strong></li>
+<li>basic <strong>Docker</strong></li>
+</ul></li>
+</ul>
+                        <h4>Benefits</h4>
+        <p>Test innovative tools and applications</p>
+        
+        <hr>
+        <div>
+          <h5>Intern Information</h5>
+<p>An internship with Nexss.com lasts 2-12 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
+        </div>
+      </div>
+            <hr>      <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
+<p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
     </div>
     <div>
       <h2>Spontaneous application</h2>
@@ -223,22 +206,22 @@ permalink: /nexss-career.html
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
         <!-- <li>
-          <a href="privacy-policy.html">Privacy Policy</a>
+          <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
         </li>
         <li>
-          <a href="terms-and-conditions.html">Terms and Conditions</a>
+          <a href="pl/regulamin.html">Regulamin</a>
         </li> -->
         <li>
-          <a href="nexss-blog.html">Blog</a>
+          <a href="pl/nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="nexss-career.html">Career</a>
+          <a href="pl/nexss-career.html">Kariera</a>
         </li>
         <li>
-          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="nexss-programming-languages.html">Supported
+          <a href="pl/nexss-programmer-jezyki-programowania.html">Supported
             programming languages</a>
         </li>
       </ul>
@@ -255,8 +238,8 @@ permalink: /nexss-career.html
     Copyright © 2008 - 2021 Nexss.com, Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
+    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
