--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -170,7 +170,13 @@ permalink: /en/nexss-career.html
         <p>
         </p>
                 <hr>
-        <h3><a href="en/open-source-video-editor/index5/nexss-career-job-details.html">Open Source Video Editor</a>
+        <h3><a href="en/open-source-video-editor-intern/index5/nexss-career-job-details.html">Open Source Video Editor - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="en/open-source-software-tester-intern/index6/nexss-career-job-details.html">Open Source Software Tester - Intern</a>
           <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </h3>
         <p>
