--- a/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
+++ b/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
@@ -115,6 +115,9 @@ permalink: /en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
                 <a href="en/index.html#services">services</a>
             </li>
             <li>
+                <a href="en/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
             </li>
             <li>
                 <a href="en/index.html#contacts">contact</a>
+            </li>
+            <li>
+                <a href="en/easy-install-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
