--- a/nexss-career.html
+++ b/nexss-career.html
@@ -115,6 +115,9 @@ permalink: /nexss-career.html
                 <a href="index.html#services">services</a>
             </li>
             <li>
+                <a href="nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /nexss-career.html
             </li>
             <li>
                 <a href="index.html#contacts">contact</a>
+            </li>
+            <li>
+                <a href="easy-install-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
@@ -177,6 +183,18 @@ permalink: /nexss-career.html
         </p>
                 <hr>
         <h3><a href="open-source-software-tester-intern/index6/nexss-career-job-details.html">Open Source Software Tester - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="open-source-python-programmer-intern/index7/nexss-career-job-details.html">Open Source Python Programmer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="open-source-php-programmer-intern/index8/nexss-career-job-details.html">Open Source PHP Programmer - Intern</a>
           <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </h3>
         <p>
