--- a/pl/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
+++ b/pl/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
@@ -115,6 +115,9 @@ permalink: /pl/open-source-content-and-seo-specialist-intern/index3/nexss-career
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /pl/open-source-content-and-seo-specialist-intern/index3/nexss-career
             </li>
             <li>
                 <a href="pl/index.html#contacts">kontakt</a>
+            </li>
+            <li>
+                <a href="pl/latwa-instalacja-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
@@ -150,7 +156,12 @@ permalink: /pl/open-source-content-and-seo-specialist-intern/index3/nexss-career
                         <h4>Nice To Have</h4>
         <p>SEO / Search Engine Optimization</p>
                         <h4>Benefits</h4>
-        <p>Developing <b>seo and content</b> for innovative tools and applications</p>
+        <ul>
+<li>Developing <b>seo and content</b> for innovative tools and applications, 
+<ul>
+<li>Learn new technologies or services based on business demands and industry trends.</li>
+</ul></li>
+</ul>
         
         <hr>
         <div>
