--- a/en/index.html
+++ b/en/index.html
@@ -117,6 +117,9 @@ permalink: /en/index.html
                 <a href="en/index.html#services">services</a>
             </li>
             <li>
+                <a href="en/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -124,6 +127,9 @@ permalink: /en/index.html
             </li>
             <li>
                 <a href="en/index.html#contacts">contact</a>
+            </li>
+            <li>
+                <a href="en/easy-install-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
