--- a/en/open-source-software-tester-intern/index6/nexss-career-job-details.html
+++ b/en/open-source-software-tester-intern/index6/nexss-career-job-details.html
@@ -115,6 +115,9 @@ permalink: /en/open-source-software-tester-intern/index6/nexss-career-job-detail
                 <a href="en/index.html#services">services</a>
             </li>
             <li>
+                <a href="en/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /en/open-source-software-tester-intern/index6/nexss-career-job-detail
             </li>
             <li>
                 <a href="en/index.html#contacts">contact</a>
+            </li>
+            <li>
+                <a href="en/easy-install-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
@@ -157,7 +163,12 @@ permalink: /en/open-source-software-tester-intern/index6/nexss-career-job-detail
 </ul></li>
 </ul>
                         <h4>Benefits</h4>
-        <p>Test innovative tools and applications</p>
+        <ul>
+<li>Test innovative tools and applications, 
+<ul>
+<li>Learn new technologies or services based on business demands and industry trends.</li>
+</ul></li>
+</ul>
         
         <hr>
         <div>
