--- a/en/open-source-sound-designer-intern/index4/nexss-career-job-details.html
+++ b/en/open-source-sound-designer-intern/index4/nexss-career-job-details.html
@@ -115,6 +115,9 @@ permalink: /en/open-source-sound-designer-intern/index4/nexss-career-job-details
                 <a href="en/index.html#services">services</a>
             </li>
             <li>
+                <a href="en/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /en/open-source-sound-designer-intern/index4/nexss-career-job-details
             </li>
             <li>
                 <a href="en/index.html#contacts">contact</a>
+            </li>
+            <li>
+                <a href="en/easy-install-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
@@ -156,7 +162,12 @@ permalink: /en/open-source-sound-designer-intern/index4/nexss-career-job-details
 </ul></li>
 </ul>
                         <h4>Benefits</h4>
-        <p>Design <b>music and sound</b> for innovative tools and applications</p>
+        <ul>
+<li>Design <b>music and sound</b> for innovative tools and applications, 
+<ul>
+<li>Learn new technologies or services based on business demands and industry trends.</li>
+</ul></li>
+</ul>
         
         <hr>
         <div>
