--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@ permalink: /
                 <a href="index.html#services">services</a>
             </li>
             <li>
+                <a href="nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="nexss-blog.html">blog</a>
             </li>
             <li>
@@ -124,6 +127,9 @@ permalink: /
             </li>
             <li>
                 <a href="index.html#contacts">contact</a>
+            </li>
+            <li>
+                <a href="easy-install-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
