--- a/nexss-programming-languages.html
+++ b/nexss-programming-languages.html
@@ -115,6 +115,9 @@ permalink: /nexss-programming-languages.html
                 <a href="index.html#services">services</a>
             </li>
             <li>
+                <a href="nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /nexss-programming-languages.html
             </li>
             <li>
                 <a href="index.html#contacts">contact</a>
+            </li>
+            <li>
+                <a href="easy-install-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
