--- a/pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -115,6 +115,9 @@ permalink: /pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
             </li>
             <li>
                 <a href="pl/index.html#contacts">kontakt</a>
+            </li>
+            <li>
+                <a href="pl/latwa-instalacja-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
