--- a/pl/index.html
+++ b/pl/index.html
@@ -117,6 +117,9 @@ permalink: /pl/index.html
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -124,6 +127,9 @@ permalink: /pl/index.html
             </li>
             <li>
                 <a href="pl/index.html#contacts">kontakt</a>
+            </li>
+            <li>
+                <a href="pl/latwa-instalacja-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
