--- a/pl/open-source-art-designer-intern/index2/nexss-career-job-details.html
+++ b/pl/open-source-art-designer-intern/index2/nexss-career-job-details.html
@@ -115,6 +115,9 @@ permalink: /pl/open-source-art-designer-intern/index2/nexss-career-job-details.h
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /pl/open-source-art-designer-intern/index2/nexss-career-job-details.h
             </li>
             <li>
                 <a href="pl/index.html#contacts">kontakt</a>
+            </li>
+            <li>
+                <a href="pl/latwa-instalacja-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
@@ -155,7 +161,12 @@ permalink: /pl/open-source-art-designer-intern/index2/nexss-career-job-details.h
 <li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
 </ul>
                         <h4>Benefits</h4>
-        <p>Developing <strong>art</strong> for innovative tools and applications</p>
+        <ul>
+<li>Developing <strong>art</strong> for innovative tools and applications, 
+<ul>
+<li>Learn new technologies or services based on business demands and industry trends.</li>
+</ul></li>
+</ul>
         
         <hr>
         <div>
