--- a/pl/open-source-video-editor-intern/index5/nexss-career-job-details.html
+++ b/pl/open-source-video-editor-intern/index5/nexss-career-job-details.html
@@ -115,6 +115,9 @@ permalink: /pl/open-source-video-editor-intern/index5/nexss-career-job-details.h
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-career.html">career</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -122,6 +125,9 @@ permalink: /pl/open-source-video-editor-intern/index5/nexss-career-job-details.h
             </li>
             <li>
                 <a href="pl/index.html#contacts">kontakt</a>
+            </li>
+            <li>
+                <a href="pl/latwa-instalacja-nexss-programmer.html">NEXSS PROGRAMMER</a>
             </li>
         </ul>
     </div>
@@ -152,7 +158,12 @@ permalink: /pl/open-source-video-editor-intern/index5/nexss-career-job-details.h
 <li><strong>Natron</strong> or <strong>Blender</strong> experience</li>
 </ul>
                         <h4>Benefits</h4>
-        <p>Develop <b>videos</b> for innovative tools and applications</p>
+        <ul>
+<li>Develop <b>videos</b> for innovative tools and applications, 
+<ul>
+<li>Learn new technologies or services based on business demands and industry trends.</li>
+</ul></li>
+</ul>
         
         <hr>
         <div>
