--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -199,6 +199,12 @@ permalink: /en/nexss-career.html
         </h3>
         <p>
         </p>
+                <hr>
+        <h3><a href="en/open-source-nodejs-programmer-intern/index9/nexss-career-job-details.html">Open Source NodeJS Programmer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
               </div>
 
       <hr>
