--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -205,6 +205,30 @@ permalink: /en/nexss-career.html
         </h3>
         <p>
         </p>
+                <hr>
+        <h3><a href="en/open-source-typescript-programmer-intern/index10/nexss-career-job-details.html">Open Source TypeScript Programmer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="en/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html">Open Source Machine Learning Engineer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="en/open-source-data-scientist-intern/index12/nexss-career-job-details.html">Open Source Data Scientist - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="en/open-source-business-intelligence-developer-intern/index13/nexss-career-job-details.html">Open Source Business Intelligence Developer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
               </div>
 
       <hr>
