--- a/en/open-source-nodejs-programmer-intern/index9/nexss-career-job-details.html
+++ b/en/open-source-nodejs-programmer-intern/index9/nexss-career-job-details.html
@@ -165,7 +165,7 @@ permalink: /en/open-source-nodejs-programmer-intern/index9/nexss-career-job-deta
         <ul>
 <li>Development innovative WEB and CLI solutions, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
