--- a/open-source-sound-designer-intern/index4/nexss-career-job-details.html
+++ b/open-source-sound-designer-intern/index4/nexss-career-job-details.html
@@ -165,7 +165,7 @@ permalink: /open-source-sound-designer-intern/index4/nexss-career-job-details.ht
         <ul>
 <li>Design <b>music and sound</b> for innovative tools and applications, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
