--- a/en/open-source-python-programmer-intern/index7/nexss-career-job-details.html
+++ b/en/open-source-python-programmer-intern/index7/nexss-career-job-details.html
@@ -161,7 +161,7 @@ permalink: /en/open-source-python-programmer-intern/index7/nexss-career-job-deta
         <ul>
 <li>Development innovative Blender 3D add-ons, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
