--- a/open-source-software-tester-intern/index6/nexss-career-job-details.html
+++ b/open-source-software-tester-intern/index6/nexss-career-job-details.html
@@ -166,7 +166,7 @@ permalink: /open-source-software-tester-intern/index6/nexss-career-job-details.h
         <ul>
 <li>Test innovative tools and applications, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
