--- a/pl/open-source-art-designer-intern/index2/nexss-career-job-details.html
+++ b/pl/open-source-art-designer-intern/index2/nexss-career-job-details.html
@@ -164,7 +164,7 @@ permalink: /pl/open-source-art-designer-intern/index2/nexss-career-job-details.h
         <ul>
 <li>Developing <strong>art</strong> for innovative tools and applications, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
