--- a/pl/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
+++ b/pl/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
@@ -159,7 +159,7 @@ permalink: /pl/open-source-content-and-seo-specialist-intern/index3/nexss-career
         <ul>
 <li>Developing <b>seo and content</b> for innovative tools and applications, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
