--- a/pl/open-source-software-developer-intern/index1/nexss-career-job-details.html
+++ b/pl/open-source-software-developer-intern/index1/nexss-career-job-details.html
@@ -175,7 +175,7 @@ permalink: /pl/open-source-software-developer-intern/index1/nexss-career-job-det
         <ul>
 <li>Developing innovative tools and applications, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
