--- a/pl/open-source-video-editor-intern/index5/nexss-career-job-details.html
+++ b/pl/open-source-video-editor-intern/index5/nexss-career-job-details.html
@@ -161,7 +161,7 @@ permalink: /pl/open-source-video-editor-intern/index5/nexss-career-job-details.h
         <ul>
 <li>Develop <b>videos</b> for innovative tools and applications, 
 <ul>
-<li>Learn new technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
 </ul></li>
 </ul>
         
