--- a/nexss-career.html
+++ b/nexss-career.html
@@ -149,13 +149,9 @@ permalink: /nexss-career.html
           evolutionary</strong> products. We will give you more details at the later stage. Check our job openings and
         if
         you have
-        any questions don't hesitate to contact us.</p>
-      <p>
-        We are looking for people in any age!</p>
+        any questions don't hesitate to contact us at <a href="mailto:jobs@nexss.com">jobs@nexss.com</a></p>
     </div>
-
     <div>
-
       <div>
                 <hr>
         <h3><a href="open-source-software-developer-intern/index1/nexss-career-job-details.html">Open Source Software Developer - Intern</a>
