--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -285,6 +285,12 @@ permalink: /en/nexss-career.html
         </h3>
         <p>
         </p>
+                <hr>
+        <h3><a href="en/open-source-music-producer-bitwig-intern/index23/nexss-career-job-details.html">Open Source Music Producer Bitwig - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
               </div>
 
       <hr>
